Add generated graphics specimens with prompts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 # Ignore secret material
 .env/
 .venv/
+
+# Ignore Python cache artifacts
+**/__pycache__/
+*.py[cod]
+
+# Ignore runtime logs
+*.log
+artifacts/generated/**/*.log
